[gd_scene load_steps=2 format=3 uid="uid://dg3fliufon0m4"]

[ext_resource type="Script" uid="uid://bmic2nb52351x" path="res://scenes/ui/upgrade_card.gd" id="1_08fp5"]

[node name="UpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(120, 150)
script = ExtResource("1_08fp5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Test name"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Description etcccccccccccccccccccc"
autowrap_mode = 3

[node name="SelectButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"
